@@ -286,6 +286,8 @@
 			<keyword>\\</keyword>
 			<!-- Logic and control -->
 			<keyword>(\\\+|!)</keyword>
+			<!-- Existential quantifier -->
+			<keyword>\^</keyword>
 		</context>
 	
 		<context id="number" style-ref="number">
