@@ -1,7 +1,7 @@
 # highlighting for Logtalk source files (http://logtalk.org/)
 #
 #	written by Paulo Moura (pmoura@logtalk.org)
-#	last revised on 25 October 2009
+#	last revised on 5 December 2009
 
 comment start "%"
 comment delim "/*" "*/" multiline nested
@@ -72,7 +72,8 @@ normal =	'\<[a-z][A-Za-z0-9_]*'
 
 number =	'0\'.|0b[0-1]+|0o[0-7]+|0x[0-9a-fA-F]+|[0-9]+(\.[0-9]+)?([eE]([-+])?[0-9]+)?'
 
-symbol =	"::", "^^", ":",
+symbol =	"^",
+			"::", "^^", ":",
 			">>", "<<", "/\\", "\\/", "\\",
 			"=:=", "=\\=", "<", "=<", ">", ">=",
 			"=..",
