@@ -180,7 +180,7 @@
 		</dict>
 		<dict>
 			<key>match</key>
-			<string>(:-|!|\\+|,|;|--&gt;|-&gt;|=|\=|\.|=\.\.|\bis\b)</string>
+			<string>(:-|!|\\+|,|;|--&gt;|-&gt;|=|\=|\.|=\.\.|\^|\bis\b)</string>
 			<key>name</key>
 			<string>keyword.operator.misc.logtalk</string>
 		</dict>
